# GalaxiaOS

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml  render.free.yaml  render.yaml
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/app/: __init__.py  config.py  db.py  deps.py  embed_service.py  main.py  observability.py  ratelimit.py  security.py
backend/app/api/: apikeys.py  artifacts.py  auth.py  bf_mcp.py  billing.py  budget.py  chat.py  comms.py  companies.py  copilot.py  data_labels.py  decisions.py  delegate.py  dev.py  domains.py  events.py  mcp.py  (+14 more)
backend/migrations/: env.py
backend/tests/: conftest.py  test_advance_cycle.py  test_agent_backend.py  test_bf_mcp.py  test_budget_escalation.py  test_business_function.py  test_capability_requests.py  test_chat.py  test_company_reset.py  test_config_url.py  test_connected_backend.py  test_continuous_cycle.py  test_copilot_history.py  test_cost_meter.py  test_critic.py  test_data_agent.py  test_data_policy.py  test_data_policy_files.py  test_decision_chat.py  test_decisions_context.py  test_decisions_flow.py  test_delegate.py  test_design_agent.py  test_dev_reset.py  test_directives.py  test_dispatch_and_secret_guards.py  test_dispatch_missing_role.py  test_dispatch_objective.py  test_dm_spawn_when_parked.py  test_domains.py  test_domains_space.py  test_email.py  test_email_setup.py  test_embed_service.py  test_error_monitor.py  test_event_counters.py  test_external_messages.py  test_feature_requests.py  test_files_provider.py  test_fleet_dedupe.py  (+84 more)
(+273 files in other folders)
