[project]
name = "abos-backend"
version = "0.1.0"
description = "Autonomous Business Operating System — backend & agent runtime"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pgvector>=0.3.6",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=44.0",
    "anthropic>=0.40",
    "openai>=1.40",
    "arq>=0.26",
    "redis>=5.2",
    "httpx>=0.28",
    "email-validator>=2.2",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "aiosqlite>=0.20",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# pyupgrade ("UP") is intentionally omitted: its fixes here are "unsafe"
# (e.g. str+Enum -> StrEnum) and could alter enum serialization.
select = ["E", "F", "I", "B"]
# E501: line length is handled by `ruff format`, not enforced as a lint error.
# B008: FastAPI's documented `param = Depends(...)` default pattern.
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
